force-app/main/default/objects/ssot__CarePlanActivityDetail__dlm/fields/ssot__CarePlanActivityId__c.field-meta.xml
<CustomField>
    <fullName>ssot__CarePlanActivityId__c</fullName>
    <label>Care Plan Activity</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CarePlanActivityId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>