force-app/main/default/objects/ssot__CarePlanActivityDetail__dlm/fields/ssot__rel_1734838270332_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1734838270332_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CarePlanActivityDetail_CarePlanActiv_rel</label>
    <referenceTo>ssot__CarePlanActivity__dlm</referenceTo>
    <relationshipLabel>CarePlanActivityDetail_CarePlanActiv_rel</relationshipLabel>
    <relationshipName>rel_1734838270332_end</relationshipName>
    <type>Lookup</type>
</CustomField>