force-app/main/default/objects/ssot__CarePlanActivityDetail__dlm/fields/ssot__rel_1734838283096_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1734838283096_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CarePlanActivityDetail_DetailCodeId__rel</label>
    <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
    <relationshipLabel>CarePlanActivityDetail_DetailCodeId__rel</relationshipLabel>
    <relationshipName>rel_1734838283096_end</relationshipName>
    <type>Lookup</type>
</CustomField>